<resources>
    <string name="app_name">Oyster Gape Graph</string>
    <string name="title_activity_select_file">SelectFileActivity</string>
    <string name="select_file_to_graph">Select File To Graph</string>
    <string name="acquiring_data">Acquiring Data</string>
    <string name="select">Select</string>
    <string name="loading_graph">Loading Graph</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
</resources>
